--- a/latex-sigcomm18-master/paper.tex
+++ b/latex-sigcomm18-master/paper.tex
@@ -44,16 +44,21 @@
 % \affiliation{%
 %   \institution{Affiliation}
 %   \streetaddress{Address}
-%   \city{City} 
-%   \state{State} 
-%   \postcode{Zipcode}
+%   \city{Gresham} 
+ %  \state{Oregon} 
+%   \postcode{97080}
 % }
-% \email{email@domain.com}
+ \email{asummer8@uoregon.edu}
 
 % The default list of authors is too long for headers}
 \renewcommand{\shortauthors}{Summers}
 
 \begin{abstract}
+
+This study addresses the impacts of changing topology in a client-server distributed application setting in light because of the limitations of currently used static topologies. Using simulations conducted in OMNet++, we examined the performance benefits that can be gained by modifying the physical layer topology on distributed client-server applications related to TPC-H. These include distributed systems involving data warehousing, business intelligence, decision support systems, and online analytical processing. Our findings show that performance boosts relating to productivity and scalability in the system can be gained by tweaking a topology with the caveat that there is potential to hurt other distributed applications in the same topology. This study contributes to further understanding the relationship between the topology and performance of a distributed application paving the way for future solutions that can leverage these performance benefits.
+
+
+
 \end{abstract}
 
 \maketitle
