--- a/latex-sigcomm18-master/reference.bib
+++ b/latex-sigcomm18-master/reference.bib
@@ -29,8 +29,6 @@
       title={Optical Switching Data Center Networks: Understanding Techniques and Challenges}, 
       author={Xuwei Xue and Shaojuan Zhang and Bingli Guo and Wei Ji and Rui Yin and Bin Chen and Shanguo Huang},
       year={2023},
-      eprint={2302.05298},
-      archivePrefix={arXiv},
       primaryClass={cs.NI}
 }
 
@@ -43,14 +41,14 @@
 }
 
 @article{hall_survey_2021,
-  title={Jellyfish: Networking Data Centers Randomly},
-  author={Singla, Ankit and Hong, Chi-Yao and Popa, Lucian and Godfrey, P. Brighten},
-  booktitle={Proceedings of the 9th USENIX Conference on Networked Systems Design and Implementation},
-  year={2012},
-  publisher={USENIX Association},
-  address={San Jose, CA},
-  url={https://www.usenix.org/conference/nsdi12/technical-sessions/presentation/singla},
-  pages={1-14}
+  title={A Survey of Reconfigurable Optical Networks},
+  author={Hall, Matthew Nance and Foerster, Klaus-Tycho and Schmid, Stefan and Durairajan, Ramakrishnan},
+  journal={Optical Switching and Networking},
+  volume={41},
+  pages={100621},
+  year={2021},
+  publisher={Elsevier B.V.},
+  address={University of Oregon, 1447 E. 13th Ave, Eugene, OR, 97403-1202, USA; University of Vienna, Waehringer Str. 29, 1090, Vienna, Austria},
 }
 
 @book{kurose2021computer,
@@ -65,5 +63,4 @@
   title = {Optical Switching: Device Technology and Applications in Networks},
   author = {Nandi, Dalia and Nandi, Sandip and Sarkar, Angsuman and Sarkar, Chandan Kumar},
   year = {2022},
-  publisher = {Publisher},
 }
